--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -23,7 +23,7 @@
                 <li sec:authorize="isAnonymous()" class="nav-item"><a class="nav-link" th:href="@{/login}">Вход</a></li>
                 <li sec:authorize="isAnonymous()" class="nav-item"><a class="nav-link" th:href="@{/register}">Регистрация</a></li>
                 <li class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" id="cityDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a href="#" class="nav-link dropdown-toggle" id="productInfoDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Product Info
                     </a>
                     <div class="dropdown-menu" aria-labelledby="productInfoDropdown">
@@ -34,12 +34,12 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" id="airlineDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a href="#" class="nav-link dropdown-toggle" id="productDeterminationDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Product Determination
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="airlineDropdown">
-                        <a th:href="@{/airline/create}" class="dropdown-item">Создать</a>
-                        <a th:href="@{/airline}" class="dropdown-item">Список</a>
+                    <div class="dropdown-menu" aria-labelledby="productDeterminationDropdown">
+                        <a th:href="@{/determination/train}" class="dropdown-item">Тренировать модель</a>
+                        <a th:href="@{/determination/predict}" class="dropdown-item">Предсказать продукт</a>
                     </div>
                 </li>
                 <li sec:authorize="isAuthenticated()" class="nav-item ml-auto"><a class="nav-link" th:href="@{/logout}">Выйти</a></li>
